...
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="6dp"
        android:text="description : \n cdhfhdfjfdhjdfh" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="19dp"
        android:text="LOGIN" />

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewPager"
...
        android:fontFamily="@font/maven_pro"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/goToUserProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="19dp"
...
