...
    <string name="sign_up_success">Sign up success</string>
    <string name="password">password</string>>
    <string name="username">username</string>
    <string name="register">Register</string>>
    <string name="email_hint">Your email address</string>>
    <string name="repeat_password_hint">Confirm the password</string>>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="sign_in_failure">Incorrect email or password</string>
    <string name="email">email</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="forgot_password">forgot password</string>
    <string name="reset_password">Reset password</string>
...
    <string name="organizers">Organizers</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="organizer_invite_text">Log in to view the invite</string>
    <string name="organizer_invite_text_1">"You are invited to become an organizer of the event</string>
    <string name="organizer_invite_text_2">Sign in to accept the invitation</string>
    <string name="goToUserEventsList">Events</string>
    <string name="goToUserFriendsList">Friends</string>
    <string name="profile">Profile</string>
    <string name="event_add_success">Event added</string>
    <string name="event_add_failure">Error occurred while adding the event</string>
    <string name="group">Your group</string>
    <string name="invite_group">Invite someone to group</string>
    <string name="leave_group">Leave group</string>
    <string name="group_invite_text">You are invited to a group.</string>
...
