...
                    android:onClick="onEditImageClicked"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/event_details_title"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:enabled="false"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_img_layout"
...
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/event_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_details_title"
                android:layout_marginTop="6dp"
                android:text="@string/description"
                android:textColor="#A9A9A9"
...
            android:id="@+id/organizers_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditEventOrganizers">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/organizers_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <Button
            android:id="@+id/invite_organizer_button"
...
