...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map.MapActivity"
    tools:layout="@layout/activity_main">

    <Button
        android:id="@+id/butRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
...
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:onClick="onUpdateLocationsCliked"
        android:text="update locations" />

    <Button
        android:id="@+id/butLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:padding="10dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/butSOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/sos_main"
        android:visibility="invisible" />

    <Button
        android:id="@+id/butFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
...
